# merklebuilder

./: .gitignore  Cargo.toml  DOCUMENTATION_INDEX.md  GIT_COMMIT_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  MOBILE_BROWSER_IMPROVEMENTS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TEST_INFRASTRUCTURE_REPORT.md  TEST_RUN_REPORT.md  TEST_SUITE_SUMMARY.md  UI_UX_IMPLEMENTATION_SUMMARY.md  UI_UX_IMPROVEMENTS.md  accounts.txt  package-lock.json  test-quick.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
contracts/: DemoAirdrop.sol  foundry.toml
frontend/: index.html
scripts/: fund-contract.sh
src/: lib.rs  main.rs  merkle.rs  progress.rs
test-suite/: README.md
test-suite/03-test-api/: api.test.ts  package.json
test-suite/04-deploy-contract/: foundry.toml
test-suite/06-test-frontend/: package.json  playwright.config.ts
test-suite/scripts/: cleanup.sh  run-full-cycle.sh  run-large.sh  run-medium.sh  run-small.sh
web/: .env.example  .env.local  IMPLEMENTATION.md  IMPROVEMENTS.md  NAVIGATION_IMPROVEMENTS.md  README.md  TABS_REFACTOR.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/__tests__/: format.test.ts  validators.test.ts
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/components/: ErrorBoundary.tsx
web/coverage/: clover.xml  coverage-final.json  format.ts.html  index.html  validators.ts.html
web/hooks/: useAirdrop.ts  useAirdropData.ts  useContractState.ts  useMarketData.ts  useMarketReserves.ts  useProof.ts  useWallet.ts
web/lib/: airdrop.ts  confetti.ts  constants.ts  env.ts  (+8 more)
(+31 files in other folders)
