[package]
name = "merklebuilder"
version = "0.1.0"
edition = "2024"

[dependencies]
k256 = "0.13"
sha3 = "0.10"
indicatif = "0.17"
hex = "0.4"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
